script/diffusion/2d_diff/1
2d_diff.cpp: In function ‘void evolve(std::vector<double>&, double, double, double)’:
2d_diff.cpp:81:32: error: invalid initialization of reference of type ‘const std::vector<double>&’ from expression of type ‘const double’
     k1 = dt * cal_dudt(u, dx, D);
                                ^
2d_diff.cpp:45:16: note: in passing argument 2 of ‘std::vector<double> cal_dudt(const std::vector<double>&, const std::vector<double>&, const std::vector<int>&, const std::vector<double>&, const misc::LabelIndexConverter&)’
 vector<double> cal_dudt(const vector<double>& u,
                ^~~~~~~~
2d_diff.cpp:82:43: error: invalid initialization of reference of type ‘const std::vector<double>&’ from expression of type ‘const double’
     k2 = dt * cal_dudt(u + 0.5 * k1, dx, D);
                                           ^
2d_diff.cpp:45:16: note: in passing argument 2 of ‘std::vector<double> cal_dudt(const std::vector<double>&, const std::vector<double>&, const std::vector<int>&, const std::vector<double>&, const misc::LabelIndexConverter&)’
 vector<double> cal_dudt(const vector<double>& u,
                ^~~~~~~~
2d_diff.cpp:83:43: error: invalid initialization of reference of type ‘const std::vector<double>&’ from expression of type ‘const double’
     k3 = dt * cal_dudt(u + 0.5 * k2, dx, D);
                                           ^
2d_diff.cpp:45:16: note: in passing argument 2 of ‘std::vector<double> cal_dudt(const std::vector<double>&, const std::vector<double>&, const std::vector<int>&, const std::vector<double>&, const misc::LabelIndexConverter&)’
 vector<double> cal_dudt(const vector<double>& u,
                ^~~~~~~~
2d_diff.cpp:84:37: error: invalid initialization of reference of type ‘const std::vector<double>&’ from expression of type ‘const double’
     k4 = dt * cal_dudt(u + k3, dx, D);
                                     ^
2d_diff.cpp:45:16: note: in passing argument 2 of ‘std::vector<double> cal_dudt(const std::vector<double>&, const std::vector<double>&, const std::vector<int>&, const std::vector<double>&, const misc::LabelIndexConverter&)’
 vector<double> cal_dudt(const vector<double>& u,
                ^~~~~~~~
